bundle/manifests/windows-exporter_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: windows-exporter
  name: windows-exporter
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: windows-machine-config-operator-tls
spec:
  ports:
  - name: metrics
    port: 9182
    protocol: TCP
    targetPort: 9182
  selector:
    app.kubernetes.io/name: windows-exporter
status:
  loadBalancer: {}
