bundle/manifests/windows-machine-config-operator-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: windows-machine-config-operator-webhook-certs
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: windows-machine-config-operator
    app.kubernetes.io/part-of: wicd
  name: windows-machine-config-operator-webhook-service
spec:
  ports:
  - name: webhook-server
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: windows-machine-config-operator
status:
  loadBalancer: {}
